WIP 0.9.10 data_folder   - [ ] db     - [x] switch db to PRAGMA temp_store = 2 (MEMORY)     - [x] created indexes and tested them: they work and somewhat speed up cursors     - [x] store misInfo statistics as text     - [ ] add statistics table or more columns for each chunk?     - [ ] how to store statistics for segments rather then chunks?   - [ ] ui     - [x] enable closed-captions by default: asked on stackoverflow and found a workaround     - [ ] start to think about how to access the misInformation heatmaps     - [ ] make text icons also a modal     - [ ] integrate text analysis with keyword search in a modal     - [ ] fix table header that's transparent when scrolling down     - [ ] build an actual front page with Bootstrap or smth     - [ ] add a modal for statistical analysis of a program     - [ ] front page: add social media share buttons for that modal     - [ ] front page: highlight the top 10 BS of the week or smth     - [ ] integrate front page with cgi or smth so we can ajax-build missing pictures or smth and spare dev of a dynamic page     - [ ] integrate front page with cgi so we can tap in the database with SQLite worker and spare dev of a dynamic page     - [ ] also compute a wordCloud per chunk and show it in the tooltip?     - [ ] keep player playing while navigating like plex => iframe     - [ ] player handles playlist?     - [ ] segments have only 1 play button that loads a playlist? how about the texts?   - [ ] python     - [ ] should genMisinfoBarGraph and genMisinfoHeatMap always overwrite existing png?     - [ ] added --noPics     - [x] load and save misInfo so we can avoid heavy processing for genMisinfoBarGraph and genMisinfoHeatMap     - [x] cleaned up many functions and info levels     - [x] simplified info messages     - [x] created saveImage and saveThumbnail     - [x] refactored stopLevel and dictStopWords     - [x] move all stopLevels off Python into text files under data\     - [ ] change gettext time= to start=|stop= instead, so

--- a/kjzz/style.css
+++ b/kjzz/style.css
@@ -110,6 +110,25 @@ a.nextWeek {
   right: 0;
 }
 
+/********************* special *********************/
+.roundRed {
+  background: radial-gradient(orange 65%, transparent 65%);
+}
+.roundCrimson {
+  background: radial-gradient(red 65%, transparent 65%);
+}
+.BSoMeter {
+  font-style: italic;
+  list-style-type: none;
+}
+.BSoMeterTrigger {
+  color: orange;
+}
+.alignLeft {
+  text-align: left;
+}
+
+
 /********************* Tooltip *********************/
 /* https://www.w3schools.com/css/css_tooltip.asp ***/
 /* Tooltip container */
